--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "description": "Web frontend of initialxy-itswitch",
   "main": "static/index.html",
   "scripts": {
+    "build": "webpack -p --config webpack.production.config.js",
+    "run": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -21,8 +23,14 @@
     "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.1.6",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "glob-all": "^3.1.0"
   }
 }
