--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,14 +25,13 @@
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "glob-all": "^3.1.0",
     "invariant": "^2.2.2",
     "nullthrows": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
-  },
-  "dependencies": {
-    "glob-all": "^3.1.0"
   }
 }
+
