--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.15.3",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.1.6",
     "babel-preset-react": "^6.16.0",
@@ -34,4 +35,3 @@
     "webpack": "^1.14.0"
   }
 }
-
