--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "invariant": "^2.2.2",
     "nullthrows": "^1.0.0",
     "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
