--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,14 @@
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
     "glob-all": "^3.1.0",
     "nullthrows": "^1.0.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
+    "roboto-fontface": "^0.7.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   }
